# codex-usage-stats

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  debug_app.bat  install_desktop_shortcut.bat  install_desktop_shortcut.ps1  open_source_check.ps1  pyproject.toml  requirements-build.txt  requirements.txt  run_app.bat  run_app_silent.vbs
docs/: implementation_notes.md  release_guide.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
scripts/: build_windows.ps1
src/codex_usage_tool/: __init__.py  __main__.py  app_paths.py  web_desktop.py  web_server.py  window_settings.py
src/codex_usage_tool/core/: __init__.py  models.py  parser.py  pricing.py  statistics.py  storage.py
src/codex_usage_tool/ui/: __init__.py  app.py  charts.py  main_window.py  theme.py  widgets.py
tests/: test_app_paths.py  test_parser.py  test_session_parser.py  test_sqlite_parser.py  test_statistics.py  test_storage.py  test_web_desktop.py  test_web_server.py  test_web_server_window_actions.py  test_window_settings.py
